Converted mesh from curve has 1 uvmap name not translated in locale language. #103183

Closed
opened 2022-12-13 12:40:35 +01:00 by Guillaume Chanu · 8 comments

System Information
Operating system: Linux-6.0.0-5-amd64-x86_64-with-glibc2.36 64 Bits

Blender Version
Broken: 3.3LTS, 3.4.0 and alpha 3.5 daily build

Short description of error
UVMap names are not locale language translated when converting a curve to mesh, and when we join with another mesh there are 2 UVMap disctinct(not merged) because blender sees 2 UVMap differents(1 locale named and 1 english named). If we have unwraped and textured the 2 meshes, we lose 1 unwrapped uvmap.
(it's annoying, we must rename before join or add uv map node in shading to fix it.)

I looked at the sources code to look for the bug, the string is not translated (line 202 source/blender/blenkernel/intern/mesh_convert.cc), I tried leaving empty to let the function(line 2892 source/blender/blenkernel/intern/customdata.cc) set automatically with the translated string according to the type(defined line 1764), it works randomly (see video).

https://www.youtube.com/watch?v=tzt6x6F0uY4

Exact steps for others to reproduce the error

  • Set locale language other than English.
  • Add a curve (Bezier or path or other),
  • in object data properties, extrude geometry or depth bevel.
  • Convert it to a mesh - look in object data properties that UVMap name is not translated.
    Any other mesh added though {key Ctrl A} has the uvmap name translated.
**System Information** Operating system: Linux-6.0.0-5-amd64-x86_64-with-glibc2.36 64 Bits **Blender Version** Broken: 3.3LTS, 3.4.0 and alpha 3.5 daily build **Short description of error** UVMap names are not locale language translated when converting a curve to mesh, and when we join with another mesh there are 2 UVMap disctinct(not merged) because blender sees 2 UVMap differents(1 locale named and 1 english named). If we have unwraped and textured the 2 meshes, we lose 1 unwrapped uvmap. (it's annoying, we must rename before join or add uv map node in shading to fix it.) I looked at the sources code to look for the bug, the string is not translated (line 202 source/blender/blenkernel/intern/mesh_convert.cc), I tried leaving empty to let the function(line 2892 source/blender/blenkernel/intern/customdata.cc) set automatically with the translated string according to the type(defined line 1764), it works randomly (see video). https://www.youtube.com/watch?v=tzt6x6F0uY4 **Exact steps for others to reproduce the error** - Set locale language other than English. - Add a curve (Bezier or path or other), - in object data properties, extrude geometry or depth bevel. - Convert it to a mesh - look in object data properties that `UVMap` name is not translated. Any other mesh added though {key Ctrl A} has the uvmap name translated.

Added subscriber: @crabman

Added subscriber: @crabman

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.
It feels like the mesh generated from the Curve either has to have the UVMap name translated or the meshes added with {key Ctrl A} should not have the UVMap name depending on the language.
In fact it seems to be an inconsistency.

I can confirm the problem. It feels like the mesh generated from the Curve either has to have the UVMap name translated or the meshes added with {key Ctrl A} should not have the UVMap name depending on the language. In fact it seems to be an inconsistency.
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour
Member

Thank you for the report.

My opinion is that the new name should be converted as well, as proposed in D16775.

Note that you can disable translation of such names by disabling "New Data" in the Translation preferences, from the Interface tab, if you want your files to be in English.

Thank you for the report. My opinion is that the new name should be converted as well, as proposed in [D16775](https://archive.blender.org/developer/D16775). Note that you can disable translation of such names by disabling "New Data" in the Translation preferences, from the Interface tab, if you want your files to be in English.

This issue was referenced by edfef62371

This issue was referenced by edfef62371d5b111c7ae4bc4f6f3da2253decdc9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-12-16 02:08:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103183
No description provided.